--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -28526,6 +28526,16 @@
       "component": {
         "type": "other",
         "other": {
+          "name": "trace-cmd",
+          "version": "3.2",
+          "downloadUrl": "https://git.kernel.org/pub/scm/utils/trace-cmd/trace-cmd.git/snapshot/trace-cmd-v3.2.tar.gz"
+        }
+      }
+    },
+    {
+      "component": {
+        "type": "other",
+        "other": {
           "name": "traceroute",
           "version": "2.1.3",
           "downloadUrl": "https://sourceforge.net/projects/traceroute/files/traceroute/traceroute-2.1.3/traceroute-2.1.3.tar.gz"
